<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/select_map_type_menu_item"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:showAsAction="always|withText"
            android:title="@string/MAP_MENU_TITLE"
            android:titleCondensed="@string/MAP_MENU_TITLE"
            android:visible="true">
        <menu>
            <item
                    android:id="@+id/map_type_normal_menu_item"
                    android:showAsAction="always"
                    android:title="@string/MAP_TYPE_NORMAL"
                    android:titleCondensed="@string/MAP_TYPE_NORMAL"
                    android:visible="true"/>
            <item
                    android:id="@+id/map_type_hybrid_menu_item"
                    android:showAsAction="always"
                    android:title="@string/MAP_TYPE_HYBRID"
                    android:titleCondensed="@string/MAP_TYPE_HYBRID"
                    android:visible="true"/>
            <item
                    android:id="@+id/map_type_satellite_menu_item"
                    android:showAsAction="always"
                    android:title="@string/MAP_TYPE_SATELLITE"
                    android:titleCondensed="@string/MAP_TYPE_SATELLITE"
                    android:visible="true"/>
            <item
                    android:id="@+id/map_type_terrain_menu_item"
                    android:showAsAction="always"
                    android:title="@string/MAP_TYPE_TERRAIN"
                    android:titleCondensed="@string/MAP_TYPE_TERRAIN"
                    android:visible="true"/>
        </menu>
    </item>

    <item
            android:id="@+id/select_filter_menu_item"
            android:icon="@android:drawable/ic_menu_compass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:showAsAction="always|withText"
            android:title="@string/FILTER_TEAM_MENU_TITLE"
            android:titleCondensed="@string/FILTER_TEAM_MENU_TITLE"
            android:visible="true">
        <menu>
            <item
                    android:id="@+id/all_teams_item"
                    android:showAsAction="always"
                    android:title="@string/ALL_TEAMS"
                    android:titleCondensed="@string/ALL_TEAMS"
                    android:visible="true"/>
            <item
                    android:id="@+id/eastern_conf_item"
                    android:showAsAction="always"
                    android:title="@string/EASTERN_CONFERENCE"
                    android:titleCondensed="@string/EASTERN_CONFERENCE"
                    android:visible="true"/>
            <item
                    android:id="@+id/western_conf_item"
                    android:showAsAction="always"
                    android:title="@string/WESTERN_CONFERENCE"
                    android:titleCondensed="@string/WESTERN_CONFERENCE"
                    android:visible="true"/>
            <item
                    android:id="@+id/division_a_item"
                    android:showAsAction="always"
                    android:title="@string/DIVISION_A"
                    android:titleCondensed="@string/DIVISION_A"
                    android:visible="true"/>
            <item
                    android:id="@+id/division_b_item"
                    android:showAsAction="always"
                    android:title="@string/DIVISION_B"
                    android:titleCondensed="@string/DIVISION_B"
                    android:visible="true"/>
            <item
                    android:id="@+id/division_c_item"
                    android:showAsAction="always"
                    android:title="@string/DIVISION_C"
                    android:titleCondensed="@string/DIVISION_C"
                    android:visible="true"/>
            <item
                    android:id="@+id/division_d_item"
                    android:showAsAction="always"
                    android:title="@string/DIVISION_D"
                    android:titleCondensed="@string/DIVISION_D"
                    android:visible="true"/>
        </menu>
    </item>
</menu>